--- a/stps/Cargo.toml
+++ b/stps/Cargo.toml
@@ -10,11 +10,11 @@ license.workspace = true
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11.2"
 log = "0.4.20"
-subxt = { version = "0.35.3", features = ["substrate-compat"] }
+subxt = { version = "0.37", features = ["substrate-compat"] }
 tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
 anyhow = "1.0.81"
-# zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
-zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
+zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
+# zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
 funder = { path = "../utils/funder" }
 sender = { path = "../utils/sender" }
 serde = "1.0.197"
