--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -16,6 +16,9 @@ codec = { package = "parity-scale-codec", version = "3.5.0", default-features = 
 futures = "0.3.28"
 frame-system.workspace = true
 pallet-balances.workspace = true
+url = "2.5"
+jsonrpsee-client-transport = "0.22"
+jsonrpsee-core = "0.22"
 
 [lib]
 name = "sender_lib"
