--- a/stps/Cargo.toml
+++ b/stps/Cargo.toml
@@ -13,14 +13,14 @@ log = "0.4.20"
 subxt = { version = "0.37", features = ["substrate-compat"] }
 tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
 anyhow = "1.0.81"
-# zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
-zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
+zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
+#zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
 funder = { path = "../utils/funder" }
 sender = { path = "../utils/sender" }
 serde = "1.0.197"
 serde_json = "1.0.114"
 clap-num = "1.1.1"
-futures = "0.3.30"
+futures = "0.3.31"
 parity-scale-codec = "3.6.9"
 reqwest.workspace = true
 url = "2.5"
