--- a/.github/workflows/build-images-pr.yml
+++ b/.github/workflows/build-images-pr.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.PR_DOCKERHUB_USERNAME }}
+          password: ${{ secrets.PR_DOCKERHUB_PASSWORD }}
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
