--- a/stps/Cargo.toml
+++ b/stps/Cargo.toml
@@ -10,20 +10,26 @@ license.workspace = true
 clap = { version = "4.5.1", features = ["derive"] }
 env_logger = "0.11.2"
 log = "0.4.20"
-subxt = { version = "0.37", features = ["substrate-compat"] }
+subxt.workspace = true
 tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
 anyhow = "1.0.81"
-zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
-#zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
+# zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", branch = "main" }
+zombienet-sdk = { path = "../../zombienet-sdk/crates/sdk" }
 funder = { path = "../utils/funder" }
 sender = { path = "../utils/sender" }
 serde = "1.0.197"
 serde_json = "1.0.114"
+impl-serde = { version = "0.4.0", default-features = false }
 clap-num = "1.1.1"
 futures = "0.3.31"
 parity-scale-codec = "3.6.9"
 reqwest.workspace = true
 url = "2.5"
-jsonrpsee-client-transport = "0.22"
-jsonrpsee-core = "0.22"
+jsonrpsee-client-transport = { version = "0.24.8", features = [ "ws" ] }
+jsonrpsee-core = { version = "0.24.8", features = [ "async-client" ] }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
+sha3 = { version = "0.10.8", default-features = false }
+hex = "0.4"
+libsecp256k1 = { version = "0.7.1", default-features = false }
+sp-core.workspace = true
+sp-runtime.workspace = true
