--- a/utils/funder/Cargo.toml
+++ b/utils/funder/Cargo.toml
@@ -17,3 +17,4 @@ env_logger = "0.10.0"
 serde_json = "1.0.96"
 subxt.workspace = true
 clap = { version = "4.3.1", features = ["derive"] }
+sp-core.workspace = true
