update subxt to 0.38

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,7 @@ license = "GPL-3.0-only"
 
 [workspace]
 resolver = "2"
-members = [
-	"utils/funder",
-	"utils/sender",
-	"stps"
-]
+members = ["utils/funder", "utils/sender", "stps"]
 
 default-members = ["stps"]
 
@@ -18,7 +14,7 @@ default-members = ["stps"]
 sp-core = "31.0.0"
 sp-runtime = "32.0.0"
 sp-keyring = "32.0.0"
-subxt = { version = "0.37", features = ["substrate-compat"] }
+subxt = { version = "0.38", features = ["substrate-compat"] }
 frame-system = "31.0.0"
 pallet-balances = "31.0.0"
 reqwest = "0.11"
