Backport useful changes and fixes

--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -17,8 +17,10 @@ futures = "0.3.28"
 frame-system.workspace = true
 pallet-balances.workspace = true
 url = "2.5"
-jsonrpsee-client-transport = "0.22"
-jsonrpsee-core = "0.22"
+jsonrpsee-client-transport.workspace = true
+jsonrpsee-core.workspace = true
+sp-core.workspace = true
+sp-runtime.workspace = true
 
 [lib]
 name = "sender_lib"
