--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,11 @@ default-members = ["stps"]
 
 [workspace.dependencies]
 sp-core = "31.0.0"
-sp-runtime = "32.0.0"
-sp-keyring = "32.0.0"
-subxt = { version = "0.37", features = ["substrate-compat"] }
+sp-runtime = "34.0.0"
+sp-keyring = "34.0.0"
+subxt = "0.41"
 frame-system = "31.0.0"
 pallet-balances = "31.0.0"
 reqwest = "0.11"
+jsonrpsee-client-transport = { version = "0.24.8", features = [ "ws" ] }
+jsonrpsee-core = { version = "0.24.8", features = [ "async-client" ] }
