--- a/stps/Cargo.toml
+++ b/stps/Cargo.toml
@@ -25,8 +25,8 @@ futures = "0.3.31"
 parity-scale-codec = "3.6.9"
 reqwest.workspace = true
 url = "2.5"
-jsonrpsee-client-transport = { version = "0.24.8", features = [ "ws" ] }
-jsonrpsee-core = { version = "0.24.8", features = [ "async-client" ] }
+jsonrpsee-client-transport.workspace = true
+jsonrpsee-core.workspace = true
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
 sha3 = { version = "0.10.8", default-features = false }
 hex = "0.4"
