--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -7,18 +7,19 @@ edition = "2021"
 
 [dependencies]
 funder = { path = "../funder" }
+stps-config = { path = "../config" }
 log = "0.4.16"
 env_logger = "0.10.0"
 subxt.workspace = true
 clap = { version = "4.3.0", features = ["derive"] }
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "time"] }
-codec = { package = "parity-scale-codec", version = "3.5.0", default-features = false, features = ["derive", "full", "bit-vec"] }
+codec.workspace = true
 futures = "0.3.28"
 frame-system.workspace = true
 pallet-balances.workspace = true
 url = "2.5"
-jsonrpsee-client-transport = "0.22"
-jsonrpsee-core = "0.22"
+jsonrpsee-client-transport.workspace = true
+jsonrpsee-core.workspace = true
 sp-core.workspace = true
 
 [lib]
