--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ sp-core = "29.0.0"
 sp-runtime = "32.0.0"
 sp-keyring = "32.0.0"
 subxt = { version = "0.41" }
+subxt-signer = { version = "0.41.0", features = ["unstable-eth"] }
 frame-system = "29.0.0"
 pallet-balances = "29.0.0"
 reqwest = "0.11"
