--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -22,6 +22,7 @@ url = "2.5"
 jsonrpsee-client-transport.workspace = true
 jsonrpsee-core.workspace = true
 sp-core.workspace = true
+sp-runtime.workspace = true
 rand = { version = "0.9.0" }
 
 [lib]
