--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ pallet-balances = "29.0.0"
 reqwest = "0.11"
 jsonrpsee-client-transport = { version = "0.24.8", features = [ "ws" ] }
 jsonrpsee-core = { version = "0.24.8", features = [ "async-client" ] }
-codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive", "max-encoded-len", "full", "bit-vec"] }
+parity-scale-codec = { version = "3.6.1", features = ["derive", "max-encoded-len", "full", "bit-vec"] }
 hex = { version = "0.4.3", features = ["alloc"] }
 impl-serde = { version = "0.4.0" }
 libsecp256k1 = { version = "0.7.1" }
