--- a/stps/Cargo.toml
+++ b/stps/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0.114"
 impl-serde = { version = "0.4.0", default-features = false }
 clap-num = "1.1.1"
 futures = "0.3.31"
-parity-scale-codec = "3.6.9"
+parity-scale-codec.workspace = true
 reqwest.workspace = true
 url = "2.5"
 jsonrpsee-client-transport.workspace = true
