--- a/utils/sender/Cargo.toml
+++ b/utils/sender/Cargo.toml
@@ -21,8 +21,8 @@ futures = "0.3.28"
 frame-system.workspace = true
 pallet-balances.workspace = true
 url = "2.5"
-jsonrpsee-client-transport = { version = "0.24", features=["ws"] }
-jsonrpsee-core = {version = "0.24", features=["async-client"] }
+jsonrpsee-client-transport.workspace = true
+jsonrpsee-core.workspace = true
 sp-core.workspace = true
 sp-runtime.workspace = true
 
