--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "spam"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 # Internal dependencies
@@ -15,6 +15,7 @@ derive_more.workspace = true
 fern = "0.7.1"
 log.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 test-log.workspace = true
