--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "polkadot-tx-spammer-core"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 bon.workspace = true
@@ -12,6 +12,8 @@ log.workspace = true
 rand.workspace = true
 thiserror.workspace = true
 url.workspace = true
+tokio.workspace = true
+futures.workspace = true
 
 [dev-dependencies]
 pretty_assertions.workspace = true
