--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test-code:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./utils
