--- a/utils/dockerfiles/Dockerfile.sender
+++ b/utils/dockerfiles/Dockerfile.sender
@@ -1,27 +1,26 @@
-FROM rust:latest as builder
+FROM rust:latest AS builder
 
 COPY . /build
 
-WORKDIR /build/utils/sender
+WORKDIR /build
 
-ARG CHAIN
 ARG VCS_REF
 ARG BUILD_DATE
 
-ENV FEATURE=${CHAIN}
+RUN cargo build --release -p sender
 
-RUN cargo build --features=$FEATURE --release
+FROM ubuntu:latest
 
-FROM docker.io/library/ubuntu:22.04
+RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /build/utils/sender/target/release/sender /usr/local/bin
+COPY --from=builder /build/target/release/sender /usr/local/bin
 
 LABEL description="Docker image for sTPS sender binary" \
 	io.parity.image.authors="mattia@parity.io, devops-team@parity.io" \
 	io.parity.image.vendor="Parity Technologies" \
 	io.parity.image.description="Used to send Balances pallet Transfers from a set of pre-funded accounts" \
 	io.parity.image.created="${BUILD_DATE}" \
-    io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender"
+    io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender-any"
 
 RUN useradd -m -u 1000 -U -s /bin/sh -d /sender sender
 
