--- a/utils/dockerfiles/Dockerfile.sender
+++ b/utils/dockerfiles/Dockerfile.sender
@@ -20,7 +20,7 @@ LABEL description="Docker image for sTPS sender binary" \
 	io.parity.image.vendor="Parity Technologies" \
 	io.parity.image.description="Used to send Balances pallet Transfers from a set of pre-funded accounts" \
 	io.parity.image.created="${BUILD_DATE}" \
-    io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender-any"
+    io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender"
 
 RUN useradd -m -u 1000 -U -s /bin/sh -d /sender sender
 
