--- a/utils/dockerfiles/Dockerfile.sender
+++ b/utils/dockerfiles/Dockerfile.sender
@@ -4,12 +4,12 @@ COPY . /build
 
 WORKDIR /build
 
-ARG VCS_REF
-ARG BUILD_DATE
-
 RUN cargo build --release -p sender
 
 FROM ubuntu:latest
+
+ARG VCS_REF
+ARG BUILD_DATE
 
 RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
 
@@ -22,8 +22,8 @@ LABEL description="Docker image for sTPS sender binary" \
 	io.parity.image.created="${BUILD_DATE}" \
     io.parity.image.source="https://github.com/paritytech/polkadot-stps/blob/${VCS_REF}/utils/dockerfiles/Dockerfile.sender"
 
-RUN useradd -m -u 1000 -U -s /bin/sh -d /sender sender
+RUN id -u sender >/dev/null 2>&1 || useradd -m -U -s /bin/sh -d /home/sender sender
 
 USER sender
 
-ENTRYPOINT [ "/usr/local/bin/sender" ]
+ENTRYPOINT ["/usr/local/bin/sender"]
