--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses:                       actions/checkout@v4
     - name:                       Build Image
-      uses:                       redhat-actions/buildah-build@v2
+      uses:                       redhat-actions/buildah-build@7a95fa7ee0f02d552a32753e7414641a04307056 # v2.13
       with:
         image:                    stps-funder
         tags:                     funder-latest
